--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   eva_icons_flutter: ^3.1.0
   iconsax: ^0.0.8
   font_awesome_flutter: ^10.3.0
+  go_router: ^6.2.0
 
 dev_dependencies:
   flutter_test:
